# X-infra

./: .gitignore  Cargo.toml  QUICKSTART.md  README.md  README_USAGE.md
agent/: Cargo.toml
agent/src/: audit.rs  diag.rs  hub_forwarder.rs  ipc.rs  main.rs  metrics.rs
agent/src/exec/: action.rs  executor.rs  fix_engine.rs  mod.rs
agent/src/plugin/: mod.rs  trait.rs
agent/src/probe/: cann.rs  mod.rs  nvml.rs
agent/src/scene/: analyzer.rs  checkpoint_timeout.rs  gpu_oom.rs  gpu_util_low.rs  mod.rs  network_stall.rs  npu_subhealth.rs  process_crash.rs  storage_io_error.rs  storage_slow.rs  types.rs  workload_stalled.rs
ark-probe-ebpf/: .gitignore  CO-RE_IMPLEMENTATION.md  Cargo.toml  README.md  build.sh  generate-bindings.sh
ark-probe-ebpf/ark-probe-ebpf/: Cargo.toml
ark-probe-ebpf/ark-probe-ebpf-ebpf/: Cargo.toml
ark-probe-ebpf/ark-probe-ebpf-ebpf/src/: main.rs  rdma_probe.rs  storage_probe.rs
ark-probe-ebpf/ark-probe-ebpf-ebpf/src/bindings/: mod.rs
ark-probe-ebpf/ark-probe-ebpf/src/: main.rs
ark-probe-ebpf/xtask/src/: main.rs
core/: Cargo.toml
core/src/: event.rs  graph.rs  lib.rs
core/src/rules/: matcher.rs  mod.rs
deploy/: .dockerignore  Dockerfile  Dockerfile.agent  Dockerfile.hub  README.md  agent-daemonset.yaml  hub-deployment.yaml  kustomization.yaml  namespace.yaml  rbac.yaml
docs/: ARCHITECTURE.md  ARCHITECTURE_REFERENCE.md  CODE_REVIEW.md  EBPF_NETWORK_PROBE.md  EBPF_PID_TRAP_FIX.md  GIT_PUSH_TROUBLESHOOTING.md  INDEX.md  IPC_ARCHITECTURE.md  KY_PLATFORM_INTEGRATION.md  KY_PLATFORM_RULES.md  METRICS_EXPORT.md  ROADMAP.md  RULES_ENGINE.md  UDS_IPC_MIGRATION.md  WORKSPACE_ARCHITECTURE.md
examples/: DIAG.md  EBPF_PROBE_INTEGRATION.md  NETWORK_PROBE.md  README.md  ark-probe-network.py  ark-probe-nvml.py  requirements.txt  xctl-probe-dummy.py  xctl-probe-ebpf.rs  xctl-probe-network.py  xctl-probe-nvml.py
examples/ebpf/: README.md  network_probe.bpf.c  network_probe.rs
hub/: Cargo.toml
hub/src/: k8s_controller.rs  main.rs  metrics.rs
rules/: checkpoint-timeout.yaml  dataloader-io-error.yaml  gpu-oom.yaml  gpu-util-low.yaml  hccs-error.yaml  network-stall.yaml  npu-ecc-error.yaml  npu-subhealth.yaml  process-crash.yaml  roce-congestion.yaml  storage-io-error.yaml  storage-slow.yaml  workload-stalled.yaml
src/: diag.rs  event.rs  graph.rs  ipc.rs  main.rs
src/exec/: mod.rs
src/plugin/: mod.rs  trait.rs
src/rules/: matcher.rs  mod.rs  rule.rs
src/scene/: analyzer.rs  checkpoint_timeout.rs  gpu_oom.rs  gpu_util_low.rs  mod.rs  network_stall.rs  npu_subhealth.rs  process_crash.rs  storage_io_error.rs  storage_slow.rs  types.rs  workload_stalled.rs
xctl-probe-ebpf/: ARCHITECTURE_NOTES.md  CO-RE_IMPLEMENTATION.md  Cargo.toml  QUICKSTART.md  README.md  build.sh  generate-bindings.sh
xctl-probe-ebpf/xctl-probe-ebpf/: Cargo.toml
xctl-probe-ebpf/xctl-probe-ebpf/src/: main.rs
(+6 files in other folders)
