[package]
name = "xctl"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
rand = "0.8"
async-trait = "0.1"
colored = "2.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }