[workspace]
members = ["ark-probe-ebpf", "ark-probe-ebpf-ebpf"]
resolver = "2"

[workspace.dependencies]
aya = { version = "0.12", features = ["async_tokio"] }
aya-log = "0.2"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
bytes = "1.0"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
