[package]
name = "ark-probe-ebpf"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ark-probe-ebpf"
path = "src/main.rs"

[dependencies]
aya = { workspace = true }
aya-log = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
bytes = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
anyhow = { workspace = true }
ark-probe-ebpf-ebpf = { path = "../ark-probe-ebpf-ebpf" }
